[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/FPSController.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/ui/hud/HUDBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/ui/hud/FPSHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scenes/weapons/M16.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scenes/effects/SparkParticleRound.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/scenes/weapons/ejectingBrass/EjectingBrassTest.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=1]

margin = 0.04
radius = 0.5
height = 1.84

[sub_resource type="BoxShape" id=2]

margin = 0.04
extents = Vector3( 0.628831, 1.42372, 0.547355 )
_sections_unfolded = [ "Resource" ]

[node name="FPSController" type="KinematicBody"]
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
move_lock_x = false
move_lock_y = false
move_lock_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Transform", "Visibility", "collision" ]
health = 100
max_health = 100
movement_speed = 10.0
jumping_force = 15.0
can_double_jump = true
air_control = 0.9
line_of_sight = 50.0
floor_angle_max = 45.0
camera_sensitivity = Vector2( 0.15, 0.15 )

[node name="CameraYaw" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0 )
_sections_unfolded = [ "Transform" ]

[node name="CameraPitch" type="Spatial" parent="CameraYaw"]

[node name="Camera" type="Camera" parent="CameraYaw/CameraPitch"]
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 60.0
size = 1.0
near = 0.01
far = 100.0
_sections_unfolded = [ "Transform", "Visibility", "doppler" ]

[node name="HUDBase" parent="CameraYaw/CameraPitch/Camera" instance=ExtResource( 2 )]

[node name="FPSHUD" parent="CameraYaw/CameraPitch/Camera" instance=ExtResource( 3 )]

[node name="ShootPosTest" type="Position3D" parent="CameraYaw/CameraPitch"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.128054 )

[node name="GunNode" type="Spatial" parent="CameraYaw/CameraPitch"]

[node name="M16" parent="CameraYaw/CameraPitch/GunNode" instance=ExtResource( 4 )]
transform = Transform( -0.05, 0, 7.54979e-009, 0, 0.05, 0, -7.54979e-009, 0, -0.05, 0, -0.0636996, -0.147644 )
_sections_unfolded = [ "Transform", "Visibility" ]
moveAmount = 0.002
smoothAmount = 6.0
maxAmount = 1.0
weaponHitEffect = ExtResource( 5 )
ejectingBrass = ExtResource( 6 )
fireRate = 800
brassCount = 1000
tracerIndicator = 6
weaponSpread = 5.0
startTracerColor = Color( 0.957397, 0.988281, 0, 0.0980392 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 1.41652, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="InteractionArea" type="Area" parent="."]
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 1.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47699, 0 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

